<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Truancy</string>
    <string name="jan">JANUARY</string>
    <string name="feb">FEBRUARY</string>
    <string name="march">MARCH</string>
    <string name="april">APRIL</string>
    <string name="may">MAY</string>
    <string name="june">JUNE</string>
    <string name="july">JULY</string>
    <string name="aug">AUGUST</string>
    <string name="sept">SEPTEMBER</string>
    <string name="oct">OCTOBER</string>
    <string name="nov">NOVEMBER</string>
    <string name="dec">DECEMBER</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>

</resources>